# tablut-lib

./: CMakeLists.txt  packet.c  packet.def.h  packet.h  protocol.h  struct_io.c  struct_io.def.h  struct_io.func.h  struct_io.h
cmake/: options.cmake
cmake/compilers/: gcc.cmake
cmake/modules/: CheckCompiler.cmake
doc/: packet.txt
include/: packet.def.h  packet.h  protocol.h  protocol.sio.h  struct_io.c  struct_io.def.h  struct_io.func.h  struct_io.h
src/: CMakeLists.txt  packet.c  protocol.c  struct_io.c  struct_io.func.c
tests/: CMakeLists.txt  test_packet.c  test_struct_io.c  test_struct_io.sio.h
